# pygmalion

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
examples/: basic_usage.py
notebooks/: tutorial.ipynb
pygmalion/: __init__.py
pygmalion/constraints/: validators.py
pygmalion/engine/: synthesizer.py
pygmalion/generators/: __init__.py  base.py  bootstrap.py  categorical.py  conditional.py  mixture.py  numeric.py  registry.py
pygmalion/io/: fitting.py  quality.py  reader.py  stats.py  writer.py
pygmalion/schema/: spec.py
tests/: test_import.py
tests/test_constraints/: test_validators.py
tests/test_engine/: test_synthesizer.py
tests/test_generators/: test_bootstrap.py  test_categorical.py  test_mixture.py  test_numeric.py  test_registry.py
tests/test_io/: test_fitting.py  test_quality.py  test_reader.py  test_stats.py  test_writer.py
tests/test_schema/: test_spec.py
