[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygmalionGen"
version = "0.1.0"
description = "Synthetic tabular data generation from JSON specs"
requires-python = ">=3.10"
dependencies = [
    "pyarrow>=14.0",
    "polars>=0.20",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]